--- a/packages/ui/src/lib/i18n/locales/ko.json
+++ b/packages/ui/src/lib/i18n/locales/ko.json
@@ -135,8 +135,7 @@
       "save": "저장",
       "save_success": "저장 완료 (백업: {backup})",
       "load_error": "설정 정보를 불러올 수 없습니다.",
-      "save_error": "저장에 실패했습니다.",
-      "disabled_notice": "설정 수정이 비활성화되어 있습니다. (ALLOW_CONFIG_UPDATE=false)"
+      "save_error": "저장에 실패했습니다."
     },
     "packets": {
       "title": "패킷 로그 (RX/TX)",
@@ -199,7 +198,6 @@
     "COMMANDS_LOAD_FAILED": "명령 목록을 불러오지 못했습니다.",
     "RENAME_EMPTY_NAME": "새 이름을 입력해주세요.",
     "RENAME_FAILED": "이름 변경에 실패했습니다.",
-    "CONFIG_UPDATE_DISABLED": "설정 수정이 비활성화되어 있습니다. ALLOW_CONFIG_UPDATE=true 환경 변수를 설정하세요.",
     "CONFIG_INITIALIZATION_REQUIRED": "초기 설정이 필요합니다.",
     "INITIALIZATION_NOT_ALLOWED": "이미 초기화가 완료되었습니다.",
     "INVALID_FILENAME": "잘못된 파일명입니다.",
