--- a/packages/ui/src/lib/i18n/locales/ko.json
+++ b/packages/ui/src/lib/i18n/locales/ko.json
@@ -39,7 +39,7 @@
     "saving": "저장 중...",
     "log_retention": {
       "title": "로그 보관",
-      "desc": "설정한 TTL 동안 로그(패킷, Raw 패킷, 활동 로그)를 서버에 저장합니다. 기본값은 1시간이며 분석 목적 외에는 활성화할 필요 없습니다.",
+      "desc": "설정한 TTL 동안 로그(패킷, 활동 로그)를 서버에 저장합니다. 기본값은 1시간이며 분석 목적 외에는 활성화할 필요 없습니다.",
       "enable": "로그 보관 활성화",
       "enable_desc": "활성화 시 서버 메모리를 사용합니다. 비활성화 시 UI를 열고 있는 동안의 로그만 확인할 수 있습니다.",
       "save_now": "현재 로그 저장 및 다운로드",
