--- a/packages/ui/src/lib/i18n/locales/ko.json
+++ b/packages/ui/src/lib/i18n/locales/ko.json
@@ -382,6 +382,9 @@
     "port_error": "포트 오류: {error}",
     "no_configured_ports": "구성된 포트가 없습니다.",
     "port_tabs_aria": "포트 선택",
+    "show_entities": "엔티티 보기",
+    "show_automations": "자동화 보기",
+    "show_scripts": "스크립트 보기",
     "show_inactive_entities": "비활성 엔티티 보기",
     "port_meta": {
       "path": "경로 (Path):",
