Refine dashboard filter layout

--- a/packages/ui/src/lib/i18n/locales/en.json
+++ b/packages/ui/src/lib/i18n/locales/en.json
@@ -382,6 +382,9 @@
     "port_error": "Port Error: {error}",
     "no_configured_ports": "No configured ports found.",
     "port_tabs_aria": "Select Port",
+    "filter_section_aria": "Dashboard filters",
+    "filter_title": "Filters",
+    "filter_desc": "Choose which items to show",
     "show_entities": "Show Entities",
     "show_automations": "Show Automations",
     "show_scripts": "Show Scripts",
