--- a/packages/ui/src/lib/i18n/locales/ko.json
+++ b/packages/ui/src/lib/i18n/locales/ko.json
@@ -382,6 +382,9 @@
     "port_error": "포트 오류: {error}",
     "no_configured_ports": "구성된 포트가 없습니다.",
     "port_tabs_aria": "포트 선택",
+    "filter_section_aria": "대시보드 필터",
+    "filter_title": "필터",
+    "filter_desc": "표시할 항목을 선택하세요",
     "show_entities": "엔티티 보기",
     "show_automations": "자동화 보기",
     "show_scripts": "스크립트 보기",
