--- a/packages/ui/src/lib/i18n/locales/ko.json
+++ b/packages/ui/src/lib/i18n/locales/ko.json
@@ -473,7 +473,7 @@
       "title": "최근 활동",
       "empty": "최근 활동이 없습니다."
     },
-    "no_devices_found": "선택한 포트에서 감지된 장치나 설정된 명령이 없습니다.",
+    "no_devices_found": "표시할 항목이 없습니다.",
     "hint_inactive_performance": "비활성화 엔티티를 삭제하면 성능을 개선할 수 있습니다",
     "error_hint_restart": "연결 문제가 발생했습니다. 설정을 확인하거나 페이지를 새로고침해 주세요.",
     "entity_card": {
