Add dashboard flow for new items

--- a/packages/ui/src/lib/i18n/locales/en.json
+++ b/packages/ui/src/lib/i18n/locales/en.json
@@ -476,6 +476,29 @@
     "no_devices_found": "No items to display.",
     "hint_inactive_performance": "Deleting inactive entities can improve performance",
     "error_hint_restart": "A connection issue occurred. Please check your settings or refresh the page.",
+    "add_card_label": "Add item",
+    "add_modal": {
+      "title": "Add configuration",
+      "subtitle": "Start with an entity, automation, or script",
+      "close": "Close",
+      "back": "Back",
+      "select_category": "Select what to add",
+      "select_device_type": "Select a device type",
+      "category_entity": "Entity",
+      "category_entity_desc": "Add an RS485 device entity",
+      "category_automation": "Automation",
+      "category_automation_desc": "Create a trigger/action flow",
+      "category_script": "Script",
+      "category_script_desc": "Create a reusable action sequence",
+      "device_type_desc": "Pick a type to generate a YAML starter",
+      "yaml_editor_title": "YAML editor",
+      "yaml_hint": "Copy this snippet into your configuration file to add it.",
+      "copy_yaml": "Copy YAML",
+      "copy_success": "YAML copied to clipboard.",
+      "copy_fail": "Failed to copy YAML. Please copy it manually.",
+      "default_entity_name": "New {type}",
+      "default_script_description": "New script actions"
+    },
     "entity_card": {
       "no_status": "No status info",
       "automation_badge": "Automation",
