--- a/packages/ui/src/lib/i18n/locales/ko.json
+++ b/packages/ui/src/lib/i18n/locales/ko.json
@@ -477,6 +477,29 @@
     "no_devices_found": "표시할 항목이 없습니다.",
     "hint_inactive_performance": "비활성화 엔티티를 삭제하면 성능을 개선할 수 있습니다",
     "error_hint_restart": "연결 문제가 발생했습니다. 설정을 확인하거나 페이지를 새로고침해 주세요.",
+    "add_card_label": "항목 추가",
+    "add_modal": {
+      "title": "설정 추가",
+      "subtitle": "엔티티, 자동화, 스크립트 중에서 시작하세요",
+      "close": "닫기",
+      "back": "이전",
+      "select_category": "추가할 항목 선택",
+      "select_device_type": "디바이스 타입 선택",
+      "category_entity": "엔티티",
+      "category_entity_desc": "RS485 장치 엔티티 추가",
+      "category_automation": "자동화",
+      "category_automation_desc": "트리거/액션 흐름 생성",
+      "category_script": "스크립트",
+      "category_script_desc": "재사용 가능한 액션 시퀀스 생성",
+      "device_type_desc": "기본 YAML을 만들 타입을 고르세요",
+      "yaml_editor_title": "YAML 편집기",
+      "yaml_hint": "아래 스니펫을 설정 파일에 복사해서 추가하세요.",
+      "copy_yaml": "YAML 복사",
+      "copy_success": "YAML이 클립보드에 복사되었습니다.",
+      "copy_fail": "YAML 복사에 실패했습니다. 수동으로 복사해 주세요.",
+      "default_entity_name": "새 {type}",
+      "default_script_description": "새 스크립트 액션"
+    },
     "entity_card": {
       "no_status": "상태 정보 없음",
       "automation_badge": "자동화",
