Add gallery entity match handling

--- a/packages/ui/src/lib/i18n/locales/en.json
+++ b/packages/ui/src/lib/i18n/locales/en.json
@@ -401,6 +401,9 @@
       "entity_count": "{count} {type}",
       "automation_count": "{count} automation(s)",
       "script_count": "{count} script(s)",
+      "match_detected": "Potential Matches Found",
+      "matches_found": "{count} existing item(s) share the same packet pattern. Choose how to apply them.",
+      "match_target": "Match target: {id}",
       "conflict_detected": "Conflict Detected",
       "conflict_desc": "An existing item with ID '{id}' was found.",
       "no_conflict": "No conflict",
@@ -409,6 +412,9 @@
       "option_overwrite": "Overwrite",
       "option_skip": "Skip",
       "option_rename": "Add with new ID",
+      "option_match_overwrite": "Overwrite existing item",
+      "option_match_add": "Add as new item",
+      "option_match_skip": "Skip",
       "new_id_placeholder": "Enter new ID",
       "target_port": "Target port",
       "apply": "Apply",
