--- a/packages/ui/src/lib/i18n/locales/ko.json
+++ b/packages/ui/src/lib/i18n/locales/ko.json
@@ -402,6 +402,9 @@
       "entity_count": "{type} {count}개",
       "automation_count": "자동화 {count}개",
       "script_count": "스크립트 {count}개",
+      "match_detected": "유사 항목 감지",
+      "matches_found": "{count}개의 기존 항목이 동일한 패킷 패턴과 일치합니다. 처리 방법을 선택해주세요.",
+      "match_target": "매칭 대상: {id}",
       "conflict_detected": "충돌 감지",
       "conflict_desc": "ID '{id}'인 기존 항목이 있습니다.",
       "no_conflict": "충돌 없음",
@@ -410,6 +413,9 @@
       "option_overwrite": "덮어쓰기",
       "option_skip": "건너뛰기",
       "option_rename": "새 ID로 추가",
+      "option_match_overwrite": "기존 항목 덮어쓰기",
+      "option_match_add": "새 항목으로 추가",
+      "option_match_skip": "건너뛰기",
       "new_id_placeholder": "새 ID 입력",
       "target_port": "적용 포트",
       "apply": "적용",
